; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mt9m111.c_mt9m111_setfmt_rgb565.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mt9m111.c_mt9m111_setfmt_rgb565.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.mt9m111 = type { i64, i64 }

@MT9M111_OUTFMT_SWAP_YCbCr_Cb_Cr = common dso_local global i32 0, align 4
@MT9M111_OUTFMT_SWAP_RGB_EVEN = common dso_local global i32 0, align 4
@MT9M111_OUTFMT_RGB = common dso_local global i32 0, align 4
@MT9M111_OUTFMT_RGB565 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @mt9m111_setfmt_rgb565 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt9m111_setfmt_rgb565(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.mt9m111*, align 8
  %4 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %5 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %6 = call %struct.mt9m111* @to_mt9m111(%struct.i2c_client* %5)
  store %struct.mt9m111* %6, %struct.mt9m111** %3, align 8
  store i32 0, i32* %4, align 4
  %7 = load %struct.mt9m111*, %struct.mt9m111** %3, align 8
  %8 = getelementptr inbounds %struct.mt9m111, %struct.mt9m111* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load i32, i32* @MT9M111_OUTFMT_SWAP_YCbCr_Cb_Cr, align 4
  %13 = load i32, i32* %4, align 4
  %14 = or i32 %13, %12
  store i32 %14, i32* %4, align 4
  br label %15

15:                                               ; preds = %11, %1
  %16 = load %struct.mt9m111*, %struct.mt9m111** %3, align 8
  %17 = getelementptr inbounds %struct.mt9m111, %struct.mt9m111* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %15
  %21 = load i32, i32* @MT9M111_OUTFMT_SWAP_RGB_EVEN, align 4
  %22 = load i32, i32* %4, align 4
  %23 = or i32 %22, %21
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %20, %15
  %25 = load i32, i32* @MT9M111_OUTFMT_RGB, align 4
  %26 = load i32, i32* @MT9M111_OUTFMT_RGB565, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* %4, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %4, align 4
  %30 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @mt9m111_setup_pixfmt(%struct.i2c_client* %30, i32 %31)
  ret i32 %32
}

declare dso_local %struct.mt9m111* @to_mt9m111(%struct.i2c_client*) #1

declare dso_local i32 @mt9m111_setup_pixfmt(%struct.i2c_client*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
